# rppico-spi-to-uart

./: Cargo.toml  Makefile  README.md  memory.x
.cargo/: config.toml
src/: main.rs
