[package]
name = "rppico-spi-to-uart"
version = "0.1.0"
authors = ["Luz"]
description = "A demo project using the raspberry pico, reading from spi and sending over uart"
homepage = "https://github.com/Luz/rppico-spi-to-uart"
license = "MIT"
readme = "README.md"
repository = "https://github.com/Luz/rppico-spi-to-uart"
edition = "2021"

[dependencies]
rp-pico = "0.9"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
cortex-m-rt = "0.7.1"
cortex-m = "0.7.6"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
format_no_std = "1.0.2"

